--- a/Codes/Step 2 - mgmt data preprocessing.ipynb
+++ b/Codes/Step 2 - mgmt data preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "id": "136633d8",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "id": "40d15bad",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "id": "7724eb80",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "id": "21a02cb5",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "id": "c4afa161",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "id": "e7bf7462",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "id": "20823e14",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "id": "1450e7e2",
    "metadata": {},
    "outputs": [
@@ -184,36 +184,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/UPENN/Working_Data/MGMT_positive /\n",
+      "/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/UPENN/Working_Data/MGMT_positive/\n",
       "0\n",
-      "['UPENN-GBM-00095_11', '.DS_Store', 'UPENN-GBM-00128_11', 'UPENN-GBM-00098_11', 'UPENN-GBM-00124_11', 'UPENN-GBM-00115_11']\n",
-      "['UPENN-GBM-00095_11', 'UPENN-GBM-00128_11', 'UPENN-GBM-00098_11', 'UPENN-GBM-00124_11', 'UPENN-GBM-00115_11']\n",
+      "['UPENN-GBM-00588_11', 'UPENN-GBM-00310_11', 'UPENN-GBM-00351_11', 'UPENN-GBM-00598_11', 'UPENN-GBM-00371_11', 'UPENN-GBM-00392_11', '.DS_Store', 'UPENN-GBM-00344_11', 'UPENN-GBM-00360_11', 'UPENN-GBM-00498_11', 'UPENN-GBM-00350_11', 'UPENN-GBM-00608_11', 'UPENN-GBM-00488_11', 'UPENN-GBM-00520_11', 'UPENN-GBM-00514_11', 'UPENN-GBM-00555_11', 'UPENN-GBM-00504_11', 'UPENN-GBM-00444_11', 'UPENN-GBM-00530_11', 'UPENN-GBM-00592_11', 'UPENN-GBM-00388_11', 'UPENN-GBM-00401_11', 'UPENN-GBM-00586_11', 'UPENN-GBM-00524_11', 'UPENN-GBM-00425_11', 'UPENN-GBM-00565_11', 'UPENN-GBM-00474_11', 'UPENN-GBM-00534_11', 'UPENN-GBM-00607_11', 'UPENN-GBM-00551_11', 'UPENN-GBM-00540_11', 'UPENN-GBM-00496_11', 'UPENN-GBM-00424_11', 'UPENN-GBM-00564_11', 'UPENN-GBM-00606_11', 'UPENN-GBM-00399_11', 'UPENN-GBM-00430_11', 'UPENN-GBM-00521_11', 'UPENN-GBM-00461_11', 'UPENN-GBM-00455_11', 'UPENN-GBM-00404_11', 'UPENN-GBM-00544_11', 'UPENN-GBM-00554_11', 'UPENN-GBM-00414_11', 'UPENN-GBM-00445_11', 'UPENN-GBM-00420_11', 'UPENN-GBM-00602_11', 'UPENN-GBM-00512_11', 'UPENN-GBM-00403_11', 'UPENN-GBM-00526_11', 'UPENN-GBM-00594_11', 'UPENN-GBM-00536_11', 'UPENN-GBM-00567_11', 'UPENN-GBM-00553_11', 'UPENN-GBM-00442_11', 'UPENN-GBM-00580_11', 'UPENN-GBM-00407_11', 'UPENN-GBM-00516_11', 'UPENN-GBM-00506_11', 'UPENN-GBM-00446_11', 'UPENN-GBM-00557_11', 'UPENN-GBM-00481_11', 'UPENN-GBM-00423_11', 'UPENN-GBM-00532_11', 'UPENN-GBM-00359_11', 'UPENN-GBM-00406_11', 'UPENN-GBM-00546_11', 'UPENN-GBM-00556_11', 'UPENN-GBM-00358_11', 'UPENN-GBM-00378_11', 'UPENN-GBM-00453_11', 'UPENN-GBM-00494_11', 'UPENN-GBM-00595_11', 'UPENN-GBM-00566_11', 'UPENN-GBM-00412_11', 'UPENN-GBM-00443_11', 'UPENN-GBM-00518_11', 'UPENN-GBM-00409_11', 'UPENN-GBM-00380_11', 'UPENN-GBM-00363_11', 'UPENN-GBM-00559_11', 'UPENN-GBM-00579_11', 'UPENN-GBM-00439_11', 'UPENN-GBM-00377_11', 'UPENN-GBM-00302_11', 'UPENN-GBM-00569_11', 'UPENN-GBM-00538_11', 'UPENN-GBM-00469_11', 'UPENN-GBM-00578_11', 'UPENN-GBM-00438_11', 'UPENN-GBM-00395_11', 'UPENN-GBM-00568_11', 'UPENN-GBM-00539_11', 'UPENN-GBM-00381_11', 'UPENN-GBM-00356_11', 'UPENN-GBM-00418_11', 'UPENN-GBM-00509_11']\n",
+      "['UPENN-GBM-00588_11', 'UPENN-GBM-00310_11', 'UPENN-GBM-00351_11', 'UPENN-GBM-00598_11', 'UPENN-GBM-00371_11', 'UPENN-GBM-00392_11', 'UPENN-GBM-00344_11', 'UPENN-GBM-00360_11', 'UPENN-GBM-00498_11', 'UPENN-GBM-00350_11', 'UPENN-GBM-00608_11', 'UPENN-GBM-00488_11', 'UPENN-GBM-00520_11', 'UPENN-GBM-00514_11', 'UPENN-GBM-00555_11', 'UPENN-GBM-00504_11', 'UPENN-GBM-00444_11', 'UPENN-GBM-00530_11', 'UPENN-GBM-00592_11', 'UPENN-GBM-00388_11', 'UPENN-GBM-00401_11', 'UPENN-GBM-00586_11', 'UPENN-GBM-00524_11', 'UPENN-GBM-00425_11', 'UPENN-GBM-00565_11', 'UPENN-GBM-00474_11', 'UPENN-GBM-00534_11', 'UPENN-GBM-00607_11', 'UPENN-GBM-00551_11', 'UPENN-GBM-00540_11', 'UPENN-GBM-00496_11', 'UPENN-GBM-00424_11', 'UPENN-GBM-00564_11', 'UPENN-GBM-00606_11', 'UPENN-GBM-00399_11', 'UPENN-GBM-00430_11', 'UPENN-GBM-00521_11', 'UPENN-GBM-00461_11', 'UPENN-GBM-00455_11', 'UPENN-GBM-00404_11', 'UPENN-GBM-00544_11', 'UPENN-GBM-00554_11', 'UPENN-GBM-00414_11', 'UPENN-GBM-00445_11', 'UPENN-GBM-00420_11', 'UPENN-GBM-00602_11', 'UPENN-GBM-00512_11', 'UPENN-GBM-00403_11', 'UPENN-GBM-00526_11', 'UPENN-GBM-00594_11', 'UPENN-GBM-00536_11', 'UPENN-GBM-00567_11', 'UPENN-GBM-00553_11', 'UPENN-GBM-00442_11', 'UPENN-GBM-00580_11', 'UPENN-GBM-00407_11', 'UPENN-GBM-00516_11', 'UPENN-GBM-00506_11', 'UPENN-GBM-00446_11', 'UPENN-GBM-00557_11', 'UPENN-GBM-00481_11', 'UPENN-GBM-00423_11', 'UPENN-GBM-00532_11', 'UPENN-GBM-00359_11', 'UPENN-GBM-00406_11', 'UPENN-GBM-00546_11', 'UPENN-GBM-00556_11', 'UPENN-GBM-00358_11', 'UPENN-GBM-00378_11', 'UPENN-GBM-00453_11', 'UPENN-GBM-00494_11', 'UPENN-GBM-00595_11', 'UPENN-GBM-00566_11', 'UPENN-GBM-00412_11', 'UPENN-GBM-00443_11', 'UPENN-GBM-00518_11', 'UPENN-GBM-00409_11', 'UPENN-GBM-00380_11', 'UPENN-GBM-00363_11', 'UPENN-GBM-00559_11', 'UPENN-GBM-00579_11', 'UPENN-GBM-00439_11', 'UPENN-GBM-00377_11', 'UPENN-GBM-00302_11', 'UPENN-GBM-00569_11', 'UPENN-GBM-00538_11', 'UPENN-GBM-00469_11', 'UPENN-GBM-00578_11', 'UPENN-GBM-00438_11', 'UPENN-GBM-00395_11', 'UPENN-GBM-00568_11', 'UPENN-GBM-00539_11', 'UPENN-GBM-00381_11', 'UPENN-GBM-00356_11', 'UPENN-GBM-00418_11', 'UPENN-GBM-00509_11']\n",
       "/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/UPENN/Working_Data/MGMT_negative/\n",
       "1\n",
-      "['UPENN-GBM-00091_11', '.DS_Store', 'UPENN-GBM-00022_11', 'UPENN-GBM-00088_11', 'UPENN-GBM-00092_11', 'UPENN-GBM-00034_11']\n",
-      "['UPENN-GBM-00091_11', 'UPENN-GBM-00022_11', 'UPENN-GBM-00088_11', 'UPENN-GBM-00092_11', 'UPENN-GBM-00034_11']\n",
-      "Length of the total data: 32977\n",
-      "0 1 0 1 0 1 0 0 0 1 1 0 1 1 1 0 1 1 1 1 0 0 0 0 1 1 0 1 0 1 0 0 0 1 0 0 1 0 1 0 1 1 0 1 1 1 1 0 1 1 List Size:  32977 32977\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/_r/0nrgl50n1ln9bwhj847f2gy00000gn/T/ipykernel_16694/3290791079.py:7: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  X = np.array(X).reshape(-1, block_h, block_w, 1)  # -1 is added to solve dimension mismatch while converting list to an array.\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "cannot reshape array of size 32977 into shape (32,32,1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step 2 - mgmt data preprocessing.ipynb Cell 8'\u001b[0m in \u001b[0;36m<cell line: 34>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step%202%20-%20mgmt%20data%20preprocessing.ipynb#ch0000007?line=30'>31</a>\u001b[0m Initilizing_Features_Labels()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step%202%20-%20mgmt%20data%20preprocessing.ipynb#ch0000007?line=32'>33</a>\u001b[0m \u001b[39m# Function Call --> For Converting List into Numpy Array for faster calculation & it also take less space.\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step%202%20-%20mgmt%20data%20preprocessing.ipynb#ch0000007?line=33'>34</a>\u001b[0m Converting(block_h, block_w)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step%202%20-%20mgmt%20data%20preprocessing.ipynb#ch0000007?line=35'>36</a>\u001b[0m \u001b[39m# Function Call --> Dividing Datasets into number of cases for Cross Validation\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step%202%20-%20mgmt%20data%20preprocessing.ipynb#ch0000007?line=36'>37</a>\u001b[0m CASES \u001b[39m=\u001b[39m []\n",
-      "\u001b[1;32m/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step 2 - mgmt data preprocessing.ipynb Cell 5'\u001b[0m in \u001b[0;36mConverting\u001b[0;34m(block_h, block_w)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step%202%20-%20mgmt%20data%20preprocessing.ipynb#ch0000004?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m  \u001b[39m# Used for array operations.\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step%202%20-%20mgmt%20data%20preprocessing.ipynb#ch0000004?line=4'>5</a>\u001b[0m \u001b[39mglobal\u001b[39;00m X, y\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step%202%20-%20mgmt%20data%20preprocessing.ipynb#ch0000004?line=6'>7</a>\u001b[0m X \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49marray(X)\u001b[39m.\u001b[39;49mreshape(\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, block_h, block_w, \u001b[39m1\u001b[39;49m)  \u001b[39m# -1 is added to solve dimension mismatch while converting list to an array.\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step%202%20-%20mgmt%20data%20preprocessing.ipynb#ch0000004?line=7'>8</a>\u001b[0m y \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(y)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/Step%202%20-%20mgmt%20data%20preprocessing.ipynb#ch0000004?line=9'>10</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mArray Size with Reshape: \u001b[39m\u001b[39m'\u001b[39m, \u001b[39mlen\u001b[39m(X), \u001b[39mlen\u001b[39m(y))\n",
-      "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 32977 into shape (32,32,1)"
+      "['UPENN-GBM-00499_11', 'UPENN-GBM-00375_11', 'UPENN-GBM-00147_11', 'UPENN-GBM-00609_11', 'UPENN-GBM-00489_11', 'UPENN-GBM-00136_11', 'UPENN-GBM-00244_11', 'UPENN-GBM-00304_11', 'UPENN-GBM-00143_11', 'UPENN-GBM-00370_11', '.DS_Store', 'UPENN-GBM-00354_11', 'UPENN-GBM-00393_11', 'UPENN-GBM-00282_11', 'UPENN-GBM-00387_11', 'UPENN-GBM-00146_11', 'UPENN-GBM-00301_11', 'UPENN-GBM-00599_11', 'UPENN-GBM-00493_11', 'UPENN-GBM-00431_11', 'UPENN-GBM-00460_11', 'UPENN-GBM-00454_11', 'UPENN-GBM-00405_11', 'UPENN-GBM-00415_11', 'UPENN-GBM-00470_11', 'UPENN-GBM-00421_11', 'UPENN-GBM-00483_11', 'UPENN-GBM-00464_11', 'UPENN-GBM-00575_11', 'UPENN-GBM-00435_11', 'UPENN-GBM-00487_11', 'UPENN-GBM-00596_11', 'UPENN-GBM-00500_11', 'UPENN-GBM-00411_11', 'UPENN-GBM-00398_11', 'UPENN-GBM-00149_11', 'UPENN-GBM-00587_11', 'UPENN-GBM-00525_11', 'UPENN-GBM-00574_11', 'UPENN-GBM-00434_11', 'UPENN-GBM-00475_11', 'UPENN-GBM-00535_11', 'UPENN-GBM-00486_11', 'UPENN-GBM-00597_11', 'UPENN-GBM-00410_11', 'UPENN-GBM-00148_11', 'UPENN-GBM-00139_11', 'UPENN-GBM-00492_11', 'UPENN-GBM-00583_11', 'UPENN-GBM-00570_11', 'UPENN-GBM-00515_11', 'UPENN-GBM-00505_11', 'UPENN-GBM-00471_11', 'UPENN-GBM-00531_11', 'UPENN-GBM-00560_11', 'UPENN-GBM-00593_11', 'UPENN-GBM-00482_11', 'UPENN-GBM-00379_11', 'UPENN-GBM-00452_11', 'UPENN-GBM-00495_11', 'UPENN-GBM-00584_11', 'UPENN-GBM-00605_11', 'UPENN-GBM-00476_11', 'UPENN-GBM-00413_11', 'UPENN-GBM-00502_11', 'UPENN-GBM-00369_11', 'UPENN-GBM-00522_11', 'UPENN-GBM-00462_11', 'UPENN-GBM-00547_11', 'UPENN-GBM-00456_11', 'UPENN-GBM-00590_11', 'UPENN-GBM-00563_11', 'UPENN-GBM-00523_11', 'UPENN-GBM-00463_11', 'UPENN-GBM-00572_11', 'UPENN-GBM-00432_11', 'UPENN-GBM-00581_11', 'UPENN-GBM-00490_11', 'UPENN-GBM-00457_11', 'UPENN-GBM-00517_11', 'UPENN-GBM-00447_11', 'UPENN-GBM-00416_11', 'UPENN-GBM-00480_11', 'UPENN-GBM-00591_11', 'UPENN-GBM-00562_11', 'UPENN-GBM-00473_11', 'UPENN-GBM-00533_11', 'UPENN-GBM-00513_11', 'UPENN-GBM-00402_11', 'UPENN-GBM-00576_11', 'UPENN-GBM-00436_11', 'UPENN-GBM-00527_11', 'UPENN-GBM-00585_11', 'UPENN-GBM-00604_11', 'UPENN-GBM-00484_11', 'UPENN-GBM-00537_11', 'UPENN-GBM-00426_11', 'UPENN-GBM-00552_11', 'UPENN-GBM-00368_11', 'UPENN-GBM-00458_11', 'UPENN-GBM-00549_11', 'UPENN-GBM-00262_11', 'UPENN-GBM-00373_11', 'UPENN-GBM-00151_11', 'UPENN-GBM-00316_11', 'UPENN-GBM-00134_11', 'UPENN-GBM-00246_11', 'UPENN-GBM-00390_11', 'UPENN-GBM-00141_11', 'UPENN-GBM-00419_11', 'UPENN-GBM-00508_11', 'UPENN-GBM-00448_11', 'UPENN-GBM-00528_11', 'UPENN-GBM-00312_11', 'UPENN-GBM-00384_11', 'UPENN-GBM-00145_11', 'UPENN-GBM-00336_11', 'UPENN-GBM-00367_11', 'UPENN-GBM-00529_11', 'UPENN-GBM-00376_11', 'UPENN-GBM-00267_11', 'UPENN-GBM-00294_11', 'UPENN-GBM-00385_11', 'UPENN-GBM-00144_11', 'UPENN-GBM-00352_11', 'UPENN-GBM-00428_11', 'UPENN-GBM-00479_11', 'UPENN-GBM-00459_11', 'UPENN-GBM-00519_11', 'UPENN-GBM-00408_11', 'UPENN-GBM-00150_11', 'UPENN-GBM-00290_11', 'UPENN-GBM-00391_11', 'UPENN-GBM-00140_11', 'UPENN-GBM-00362_11', 'UPENN-GBM-00558_11', 'UPENN-GBM-00449_11']\n",
+      "['UPENN-GBM-00499_11', 'UPENN-GBM-00375_11', 'UPENN-GBM-00147_11', 'UPENN-GBM-00609_11', 'UPENN-GBM-00489_11', 'UPENN-GBM-00136_11', 'UPENN-GBM-00244_11', 'UPENN-GBM-00304_11', 'UPENN-GBM-00143_11', 'UPENN-GBM-00370_11', 'UPENN-GBM-00354_11', 'UPENN-GBM-00393_11', 'UPENN-GBM-00282_11', 'UPENN-GBM-00387_11', 'UPENN-GBM-00146_11', 'UPENN-GBM-00301_11', 'UPENN-GBM-00599_11', 'UPENN-GBM-00493_11', 'UPENN-GBM-00431_11', 'UPENN-GBM-00460_11', 'UPENN-GBM-00454_11', 'UPENN-GBM-00405_11', 'UPENN-GBM-00415_11', 'UPENN-GBM-00470_11', 'UPENN-GBM-00421_11', 'UPENN-GBM-00483_11', 'UPENN-GBM-00464_11', 'UPENN-GBM-00575_11', 'UPENN-GBM-00435_11', 'UPENN-GBM-00487_11', 'UPENN-GBM-00596_11', 'UPENN-GBM-00500_11', 'UPENN-GBM-00411_11', 'UPENN-GBM-00398_11', 'UPENN-GBM-00149_11', 'UPENN-GBM-00587_11', 'UPENN-GBM-00525_11', 'UPENN-GBM-00574_11', 'UPENN-GBM-00434_11', 'UPENN-GBM-00475_11', 'UPENN-GBM-00535_11', 'UPENN-GBM-00486_11', 'UPENN-GBM-00597_11', 'UPENN-GBM-00410_11', 'UPENN-GBM-00148_11', 'UPENN-GBM-00139_11', 'UPENN-GBM-00492_11', 'UPENN-GBM-00583_11', 'UPENN-GBM-00570_11', 'UPENN-GBM-00515_11', 'UPENN-GBM-00505_11', 'UPENN-GBM-00471_11', 'UPENN-GBM-00531_11', 'UPENN-GBM-00560_11', 'UPENN-GBM-00593_11', 'UPENN-GBM-00482_11', 'UPENN-GBM-00379_11', 'UPENN-GBM-00452_11', 'UPENN-GBM-00495_11', 'UPENN-GBM-00584_11', 'UPENN-GBM-00605_11', 'UPENN-GBM-00476_11', 'UPENN-GBM-00413_11', 'UPENN-GBM-00502_11', 'UPENN-GBM-00369_11', 'UPENN-GBM-00522_11', 'UPENN-GBM-00462_11', 'UPENN-GBM-00547_11', 'UPENN-GBM-00456_11', 'UPENN-GBM-00590_11', 'UPENN-GBM-00563_11', 'UPENN-GBM-00523_11', 'UPENN-GBM-00463_11', 'UPENN-GBM-00572_11', 'UPENN-GBM-00432_11', 'UPENN-GBM-00581_11', 'UPENN-GBM-00490_11', 'UPENN-GBM-00457_11', 'UPENN-GBM-00517_11', 'UPENN-GBM-00447_11', 'UPENN-GBM-00416_11', 'UPENN-GBM-00480_11', 'UPENN-GBM-00591_11', 'UPENN-GBM-00562_11', 'UPENN-GBM-00473_11', 'UPENN-GBM-00533_11', 'UPENN-GBM-00513_11', 'UPENN-GBM-00402_11', 'UPENN-GBM-00576_11', 'UPENN-GBM-00436_11', 'UPENN-GBM-00527_11', 'UPENN-GBM-00585_11', 'UPENN-GBM-00604_11', 'UPENN-GBM-00484_11', 'UPENN-GBM-00537_11', 'UPENN-GBM-00426_11', 'UPENN-GBM-00552_11', 'UPENN-GBM-00368_11', 'UPENN-GBM-00458_11', 'UPENN-GBM-00549_11', 'UPENN-GBM-00262_11', 'UPENN-GBM-00373_11', 'UPENN-GBM-00151_11', 'UPENN-GBM-00316_11', 'UPENN-GBM-00134_11', 'UPENN-GBM-00246_11', 'UPENN-GBM-00390_11', 'UPENN-GBM-00141_11', 'UPENN-GBM-00419_11', 'UPENN-GBM-00508_11', 'UPENN-GBM-00448_11', 'UPENN-GBM-00528_11', 'UPENN-GBM-00312_11', 'UPENN-GBM-00384_11', 'UPENN-GBM-00145_11', 'UPENN-GBM-00336_11', 'UPENN-GBM-00367_11', 'UPENN-GBM-00529_11', 'UPENN-GBM-00376_11', 'UPENN-GBM-00267_11', 'UPENN-GBM-00294_11', 'UPENN-GBM-00385_11', 'UPENN-GBM-00144_11', 'UPENN-GBM-00352_11', 'UPENN-GBM-00428_11', 'UPENN-GBM-00479_11', 'UPENN-GBM-00459_11', 'UPENN-GBM-00519_11', 'UPENN-GBM-00408_11', 'UPENN-GBM-00150_11', 'UPENN-GBM-00290_11', 'UPENN-GBM-00391_11', 'UPENN-GBM-00140_11', 'UPENN-GBM-00362_11', 'UPENN-GBM-00558_11', 'UPENN-GBM-00449_11']\n",
+      "Length of the total data: 847975\n",
+      "1 0 0 0 0 1 1 0 0 0 0 1 0 1 1 1 0 1 0 1 0 0 0 1 0 1 1 0 0 1 1 1 1 1 1 1 0 1 0 1 1 1 1 1 1 1 1 1 1 1 List Size:  847975 847975\n",
+      "Array Size with Reshape:  847975 847975\n",
+      "Array Shape with Reshape:  (847975, 32, 32, 1) (847975,)\n",
+      "Done..!!\n"
      ]
     }
    ],
