--- a/Codes/testing/Step 2-data preprocessing.ipynb
+++ b/Codes/testing/Step 2-data preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -19,17 +19,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Varialble definations\n",
     "path = '/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/'\n",
-    "block_h, block_w = (150,150)"
+    "block_h, block_w = (120,120)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +138,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function Definition --> removing .DS_Store files to avoid errors in feautre labelling\n",
+    "def remove_ds_store():\n",
+    "    import os\n",
+    "    import shutil\n",
+    "    print('Removing .DS_Store')\n",
+    "    workdir = os.listdir(Work_Dir)\n",
+    "    if '.DS_Store' in workdir:\n",
+    "        workdir.remove('.DS_Store')\n",
+    "        print(\"Removed .DS_Store from Work_Dir : {}\".format(Work_Dir))\n",
+    "    for case in workdir:\n",
+    "        try:\n",
+    "            Case_Path = os.path.join(Work_Dir, case + '/')\n",
+    "            casepath = os.listdir(Case_Path)\n",
+    "            if '.DS_Store' in casepath:\n",
+    "                casepath.remove('.DS_Store')\n",
+    "                print(\"Removed .DS_Store from Case_Path : {}\".format(Case_Path))\n",
+    "            for Type in casepath:\n",
+    "                Type_Path = os.path.join(Case_Path, Type + '/')\n",
+    "                typepath = os.listdir(Type_Path)\n",
+    "                if '.DS_Store' in typepath:\n",
+    "                    typepath.remove('.DS_Store')\n",
+    "                    print(\"Removed .DS_Store from Type_Path : {}\".format(Type_Path))\n",
+    "                for patient in typepath:\n",
+    "                    Patient_Path = os.path.join(Type_Path, patient + '/')\n",
+    "                    patientpath = os.listdir(Patient_Path)\n",
+    "                    if '.DS_Store' in patientpath:\n",
+    "                        patientpath.remove('.DS_Store')\n",
+    "                        print(\"Removed .DS_Store from Patient_Path : {}\".format(\n",
+    "                            Patient_Path))\n",
+    "                    for file in patientpath:\n",
+    "                        file_Path = os.path.join(Patient_Path, file)\n",
+    "                        if file_Path.endswith('.DS_Store'):\n",
+    "                            os.remove(file_Path)\n",
+    "                            print(\n",
+    "                                \"Removed .DS_Store from file_Path : {}\".format(file_Path))\n",
+    "        except Exception as e:\n",
+    "            print(e)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -150,12 +196,12 @@
       "/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/Case_5/train/MGMT_negative/\n",
       "1\n",
       "Case_5\n",
-      "Length of the total training data: 20694\n",
-      "0 1 1 0 0 0 0 0 1 1 1 0 1 1 0 0 0 0 0 0 0 1 0 0 1 1 1 1 0 1 1 0 0 0 1 1 0 0 0 0 1 1 1 0 1 1 1 0 1 0 Initilizing Features & Labels\n",
-      "List Size:  20694 20694\n",
+      "Length of the total training data: 16592\n",
+      "1 1 0 0 1 0 0 1 0 1 0 1 1 0 1 1 0 1 0 0 0 1 0 0 0 1 0 0 0 1 1 1 0 1 1 0 1 0 0 0 1 0 1 0 0 0 0 1 0 1 Initilizing Features & Labels\n",
+      "List Size:  16592 16592\n",
       "Converting into Numpy Array\n",
-      "Array Size with Reshape:  20694 20694\n",
-      "Array Shape with Reshape:  (20694, 150, 150, 1) (20694,)\n",
+      "Array Size with Reshape:  16592 16592\n",
+      "Array Shape with Reshape:  (16592, 120, 120, 1) (16592,)\n",
       "Storing Preprocessed Data\n",
       "Reading Data\n",
       "/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/Case_2/train/MGMT_positive/\n",
@@ -163,12 +209,12 @@
       "/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/Case_2/train/MGMT_negative/\n",
       "1\n",
       "Case_2\n",
-      "Length of the total training data: 20517\n",
-      "0 1 1 0 0 1 1 1 1 0 0 0 0 0 0 1 1 1 1 0 0 1 0 0 0 1 1 1 0 0 1 0 1 0 0 0 0 1 1 1 1 0 0 0 1 0 0 1 0 1 Initilizing Features & Labels\n",
-      "List Size:  20517 20517\n",
+      "Length of the total training data: 16413\n",
+      "0 1 0 1 0 0 1 1 0 1 1 0 1 1 0 0 1 0 1 0 1 1 0 1 0 0 1 0 0 0 0 1 1 0 0 1 1 0 1 0 0 1 0 0 0 1 1 0 0 1 Initilizing Features & Labels\n",
+      "List Size:  16413 16413\n",
       "Converting into Numpy Array\n",
-      "Array Size with Reshape:  20517 20517\n",
-      "Array Shape with Reshape:  (20517, 150, 150, 1) (20517,)\n",
+      "Array Size with Reshape:  16413 16413\n",
+      "Array Shape with Reshape:  (16413, 120, 120, 1) (16413,)\n",
       "Storing Preprocessed Data\n",
       "Reading Data\n",
       "/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/Case_3/train/MGMT_positive/\n",
@@ -176,12 +222,12 @@
       "/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/Case_3/train/MGMT_negative/\n",
       "1\n",
       "Case_3\n",
-      "Length of the total training data: 20633\n",
-      "0 0 0 1 0 0 1 0 0 1 1 1 0 0 0 1 1 0 0 1 1 1 1 0 1 0 1 1 1 0 0 0 0 0 1 1 0 0 1 0 1 0 0 1 0 1 1 0 0 1 Initilizing Features & Labels\n",
-      "List Size:  20633 20633\n",
+      "Length of the total training data: 16571\n",
+      "0 1 1 1 0 1 1 0 0 1 0 1 0 0 1 0 0 0 1 0 0 0 0 0 0 1 0 0 0 0 1 0 1 1 1 0 0 1 1 1 0 0 1 0 1 1 1 0 1 1 Initilizing Features & Labels\n",
+      "List Size:  16571 16571\n",
       "Converting into Numpy Array\n",
-      "Array Size with Reshape:  20633 20633\n",
-      "Array Shape with Reshape:  (20633, 150, 150, 1) (20633,)\n",
+      "Array Size with Reshape:  16571 16571\n",
+      "Array Shape with Reshape:  (16571, 120, 120, 1) (16571,)\n",
       "Storing Preprocessed Data\n",
       "Reading Data\n",
       "/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/Case_4/train/MGMT_positive/\n",
@@ -189,12 +235,12 @@
       "/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/Case_4/train/MGMT_negative/\n",
       "1\n",
       "Case_4\n",
-      "Length of the total training data: 20554\n",
-      "1 0 0 0 0 1 1 1 1 1 1 0 0 0 0 0 0 1 1 0 1 1 0 1 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 0 0 1 0 1 0 0 1 0 1 Initilizing Features & Labels\n",
-      "List Size:  20554 20554\n",
+      "Length of the total training data: 16450\n",
+      "0 0 0 0 0 0 0 1 1 0 0 1 0 1 1 0 0 1 1 1 1 0 0 1 0 0 1 1 0 1 1 1 1 1 0 0 0 0 0 0 1 1 1 0 0 0 0 0 1 0 Initilizing Features & Labels\n",
+      "List Size:  16450 16450\n",
       "Converting into Numpy Array\n",
-      "Array Size with Reshape:  20554 20554\n",
-      "Array Shape with Reshape:  (20554, 150, 150, 1) (20554,)\n",
+      "Array Size with Reshape:  16450 16450\n",
+      "Array Shape with Reshape:  (16450, 120, 120, 1) (16450,)\n",
       "Storing Preprocessed Data\n",
       "Reading Data\n",
       "/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/Case_1/train/MGMT_positive/\n",
@@ -202,12 +248,12 @@
       "/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/Case_1/train/MGMT_negative/\n",
       "1\n",
       "Case_1\n",
-      "Length of the total training data: 20889\n",
-      "1 0 1 0 1 1 1 0 0 0 0 0 0 1 1 0 0 1 1 0 0 1 1 0 1 1 1 0 1 0 1 1 0 1 0 1 0 0 0 0 1 0 1 1 0 1 1 0 0 1 Initilizing Features & Labels\n",
-      "List Size:  20889 20889\n",
+      "Length of the total training data: 16802\n",
+      "1 0 1 1 1 0 1 1 1 0 1 1 0 0 1 1 0 0 1 1 0 0 0 0 0 0 0 0 1 0 0 1 0 1 1 0 0 0 0 1 0 1 1 0 0 0 0 1 1 1 Initilizing Features & Labels\n",
+      "List Size:  16802 16802\n",
       "Converting into Numpy Array\n",
-      "Array Size with Reshape:  20889 20889\n",
-      "Array Shape with Reshape:  (20889, 150, 150, 1) (20889,)\n",
+      "Array Size with Reshape:  16802 16802\n",
+      "Array Shape with Reshape:  (16802, 120, 120, 1) (16802,)\n",
       "Storing Preprocessed Data\n",
       "Done..!!\n"
      ]
@@ -218,13 +264,13 @@
        "0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# All Function Calls\n",
+    "# Calling all functions\n",
     "import os\n",
     "import random\n",
     "import numpy as np  # Used for array operations.\n",
@@ -236,6 +282,8 @@
     "if '.DS_Store' in workdir:\n",
     "    workdir.remove('.DS_Store')\n",
     "# Calling Functions:\n",
+    "remove_ds_store()\n",
+    "\n",
     "for case in workdir:\n",
     "    Case_Path = os.path.join(Work_Dir, case)  # Joining \"Cases\" path.\n",
     "\n",
