--- a/py codes/feat_concat.ipynb
+++ b/py codes/feat_concat.ipynb
@@ -2474,7 +2474,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mgmt",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2488,12 +2488,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5b2455c0773d8c26655dfdc47cb2724dbbc1b091978a8bf3cd237ee649eef30f"
+    "hash": "5c41cc7a6bf458ae2af5583a7906ef5f402c759b4882f3cbfc8ede19b81b2d2f"
    }
   }
  },
